--- a/css/style.css
+++ b/css/style.css
@@ -3200,6 +3200,67 @@ input[type=checkbox] {
   font-size: 27px;
 }
 
+.es-language-dropdown-menu{
+  width: 9.375rem;
+  height: 7.8125rem;
+  padding: 0;
+  border: 0;
+  border-radius: .5rem;
+}
+
+.es-language-dropdown-menu .dropdown-item{
+  height: 33%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 1.125rem;
+  display: flex;
+  justify-content: center;
+  padding: 0 !important;
+}
+/* 
+.es-language-dropdown-menu .middle-item .dropdown-item-inner{
+  border-top: 1px solid #D2D2D2;
+  border-bottom: 1px solid #D2D2D2;
+} */
+
+.border-line{
+  width: 80%;
+  margin: auto;
+  height: 1px;
+  background-color: #d2d2d26f;
+}
+
+.es-language-dropdown-menu .first-item{
+  border-radius: .5rem .5rem 0 0; 
+}
+
+.es-language-dropdown-menu .last-item{
+  border-radius: 0 0 .5rem .5rem;
+}
+
+.es-language-dropdown-menu .dropdown-item img{
+  display: none;
+}
+.es-language-dropdown-menu .active{
+  background-color: transparent !important;
+}
+.es-language-dropdown-menu .active img{
+  display: flex;
+}
+
+.es-language-dropdown-menu .dropdown-item-inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  height: 100%;
+}
+
+.es-language-dropdown-menu .dropdown-item-inner img{
+  width: 9.92px;
+  height: 6.52px;
+}
 @media screen and (max-width: 767px) {
   .es-checkout-wrapper {
     flex-direction: column;
