--- a/css/style.css
+++ b/css/style.css
@@ -3206,6 +3206,7 @@ input[type=checkbox] {
   padding: 0;
   border: 0;
   border-radius: .5rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .es-language-dropdown-menu .dropdown-item{
@@ -3218,11 +3219,6 @@ input[type=checkbox] {
   justify-content: center;
   padding: 0 !important;
 }
-/* 
-.es-language-dropdown-menu .middle-item .dropdown-item-inner{
-  border-top: 1px solid #D2D2D2;
-  border-bottom: 1px solid #D2D2D2;
-} */
 
 .border-line{
   width: 80%;
