--- a/css/style.css
+++ b/css/style.css
@@ -3193,8 +3193,10 @@ footer {
 }
 
 input[type=checkbox] {
-  accent-color: #c07b3e53;
+  visibility: hidden;
 }
+
+
 
 .es-minus-line {
   font-size: 27px;
@@ -3256,6 +3258,80 @@ input[type=checkbox] {
 .es-language-dropdown-menu .dropdown-item-inner img{
   width: 9.92px;
   height: 6.52px;
+}
+
+
+.checkbox-label {
+  display: block;
+  position: relative;
+  padding-left: 31px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+/* Hide the default checkbox */
+input[type=checkbox] {
+  visibility: hidden;
+}
+
+/* Creating a custom checkbox
+based on demand */
+.geekmark {
+  position: absolute;
+  top: 7px;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  border-radius: .25rem;
+  background-color: #fff;
+  border: 1.5px solid #d2d2d281;
+}
+
+/* Specify the background color to be
+shown when hovering over checkbox */
+.checkbox-label:hover input ~ .geekmark:after {
+  display: block;
+  border-color: #E2A874;
+  
+}
+
+/* Specify the background color to be
+shown when checkbox is checked */
+.checkbox-label input:checked ~ .geekmark {
+  background-color: #E2A874;
+}
+
+.checkbox-label input:checked ~ input{
+  color: #151515;
+}
+
+/* Checkmark to be shown in checkbox */
+/* It is not be shown when not checked */
+.geekmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Display checkmark when checked */
+.checkbox-label input:checked ~ .geekmark:after {
+  display: block;
+}
+
+/* Styling the checkmark using webkit */
+/* Rotated the rectangle by 45 degree and 
+showing only two border to make it look
+like a tickmark */
+.checkbox-label .geekmark:after {
+  left: 4px;
+  bottom: 4px;
+  width: 4.5px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 1.5px 1.5px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 @media screen and (max-width: 767px) {
   .es-checkout-wrapper {
