--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,6 @@ header {
 
 .mobile-nav {
   background: #ffffff;
-  border-top: 1px solid #ccc2b6;
-  border-bottom: 1px solid #ccc2b6;
   position: -webkit-sticky;
   position: sticky;
   z-index: 1040;
@@ -3067,7 +3065,7 @@ footer {
 }
 
 .es-banner-header {
-  font-size: 54px !important;
+  font-size: 54px;
   font-weight: 700;
 }
 
@@ -3305,7 +3303,6 @@ shown when hovering over checkbox */
 .checkbox-label:hover input~.geekmark:after {
   display: block;
   border-color: #E2A874;
-
 }
 
 .checkbox-label:hover input:checked~.geekmark::after {
@@ -3351,8 +3348,195 @@ like a tickmark */
   transform: rotate(45deg);
 }
 
+.es-banner .btn-more {
+  display: flex;
+}
+
+.mob-banner-btn-more {
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
   .es-checkout-wrapper {
     flex-direction: column;
+  }
+
+  header {
+    display: none;
+  }
+
+  .main-carousel .carousel-inner .carousel-item {
+    height: 26.125rem;
+  }
+
+  .main-carusel-img {
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .es-main-carusel-banner {
+    position: absolute;
+    z-index: 9;
+    top: 2.25rem;
+    left: 1.25rem;
+    transform: translateY(0%);
+  }
+
+  .es-order-status {
+    display: none;
+  }
+
+  .es-banner-header {
+    font-size: 2rem;
+    line-height: 39px;
+  }
+
+  .es-banner-desc {
+    font-size: .875rem;
+    line-height: 17px;
+  }
+
+  .es-banner .btn-more {
+    display: none;
+  }
+
+  .mob-banner-btn-more {
+    display: flex;
+    position: absolute;
+    bottom: 1.5rem;
+    left: 1.25rem;
+    border-radius: .25rem;
+  }
+
+  .main-carousel .carousel-indicators {
+    width: max-content;
+    position: absolute;
+    bottom: 0;
+    top: 7.7rem;
+    left: 1.25rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  .es-products-section, .es-collections-section{
+    margin-bottom: 2.625rem;
+  }
+
+  .es-product-item{
+    margin-bottom: 0;
+  }
+
+  .es-mc-item {
+    margin-right: 1.5px;
+  }
+
+  .es-mc-img img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .es-mc-title a {
+    font-size: .75rem;
+    font-weight: 500;
+  }
+
+  .es-header-to-right {
+    margin: 0;
+    margin-bottom: .75rem;
+    transform: translateX(0);
+  }
+
+  .es-main-category-list {
+    justify-content: space-between;
+    padding: 0 1.25rem;
+  }
+
+  .es-mc-img img {
+    width: 75px;
+    height: 75px;
+  }
+
+  .es-useful-section {
+    margin-bottom: 0;
+  }
+
+  .es-app-section {
+    padding: 2.625rem 0;
+  }
+
+  .es-app-icons {
+    display: none;
+  }
+
+  .es-app-content {
+    padding: 2.25rem 0;
+  }
+
+  .es-app-title {
+    font-size: 1.5rem;
+    line-height: 29px;
+  }
+
+  .es-locations {
+    height: 29.8125rem;
+    margin-bottom: -.2rem;
+  }
+
+  .es-location-content {
+    width: 100%;
+    padding: 1.875rem 1.25rem;
+    height: fit-content;
+  }
+
+  .es-location-container {
+    align-items: baseline;
+    padding-top: 25px;
+  }
+
+  .es-location-title {
+    margin-right: 0;
+    font-size: 1.5rem;
+    width: 100%;
+  }
+
+  .es-location-info {
+    margin-bottom: 1.125rem;
+  }
+
+  .footer-content{
+    display: none;
+  }
+
+  .footer-black{
+    display: none;
+  }
+
+  #back-top{
+    display: none;
+  }
+
+  .btn-buy {
+    padding: .8rem 1.125rem;
+    border-radius: 3px;
+    letter-spacing: 1px;
+    transition: all 300ms;
+    border: 0;
+    font-size: .875rem;
+    line-height: 17px;
+    padding: .875rem 1.7rem;
+  }
+  .es-product-controls button{
+    width: 51.6px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .es-product-quantity{
+    height: 45px;
+    width: 51.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
