--- a/css/style.css
+++ b/css/style.css
@@ -251,10 +251,12 @@ header {
 
 .mobile-nav {
   background: #ffffff;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
+  bottom: 0;
   z-index: 1040;
   bottom: 0;
+  width: 100%;
+  z-index: 9999;
 }
 
 .mobile-nav .nav {
@@ -3356,6 +3358,92 @@ like a tickmark */
   display: none;
 }
 
+.accordion-item {
+  width: 100%;
+  padding: 0;
+  background-color: #fff;
+  border: 0;
+}
+
+.accordion-item h5 {
+  width: 100%;
+  border-bottom: 1px solid #a5a5a530;
+  margin-left: .7rem;
+}
+
+.accordion-item h5 .btn-link {
+  padding-left: 0;
+  width: 100%;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  color: #151515;
+  padding: 17px 0;
+  font-weight: 500;
+}
+
+.accordion-item h5 .btn-link:focus {
+  box-shadow: none;
+}
+
+.accordion-list-item {
+  font-weight: 600;
+  padding: .75rem 0;
+  border-bottom: 1px solid #a5a5a530;
+}
+
+.accordion-list-item-all a {
+  color: #E2A874;
+}
+
+.accordion-item-body {
+  padding: 0;
+  margin-left: 27px;
+}
+
+.accordion-item-ic-container {
+  width: 1.5rem;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.es-cart-qty-delete{
+  margin-bottom: 2.625rem;
+}
+
+.es-cart-qty {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.es-cart-qty .es-minus,
+.es-cart-qty .es-plus {
+  width: 2.25rem;
+  height: 2.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 6px; */
+  background: #d2d2d253;
+  border-radius: 50%;
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.es-cart-product-qty{
+  font-weight: 500;
+  font-size: 1.125rem;
+  margin: 0 1rem;
+}
+
+.es-cart-delete {
+  padding: 0;
+}
+
 @media screen and (max-width: 767px) {
   .es-checkout-wrapper {
     flex-direction: column;
@@ -3418,11 +3506,12 @@ like a tickmark */
     padding: 0;
   }
 
-  .es-products-section, .es-collections-section{
+  .es-products-section,
+  .es-collections-section {
     margin-bottom: 2.625rem;
   }
 
-  .es-product-item{
+  .es-product-item {
     margin-bottom: 0;
   }
 
@@ -3503,15 +3592,15 @@ like a tickmark */
     margin-bottom: 1.125rem;
   }
 
-  .footer-content{
+  .footer-content {
     display: none;
   }
 
-  .footer-black{
+  .footer-black {
     display: none;
   }
 
-  #back-top{
+  #back-top {
     display: none;
   }
 
@@ -3525,18 +3614,84 @@ like a tickmark */
     line-height: 17px;
     padding: .875rem 1.7rem;
   }
-  .es-product-controls button{
+
+  .es-product-controls button {
     width: 51.6px;
     height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .es-product-quantity{
+
+  .es-product-quantity {
     height: 45px;
     width: 51.6;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  #searchMobModal .modal-dialog {
+    margin: 0;
+  }
+
+  #searchMobModal .modal-content {
+    height: 100%;
+    min-height: 100vh;
+    z-index: 10;
+  }
+
+  #searchMobModal .modal-header {
+    border-bottom: 0;
+    padding: 1.125rem 1.25rem;
+  }
+
+  .mob-modal-search-ic {
+    position: absolute;
+    top: 40%;
+    left: 2.2rem;
+  }
+
+  .mob-modal-search {
+    height: 3.25rem;
+    border-radius: .25rem;
+    background-color: #d2d2d241;
+    opacity: .7;
+    border: 0;
+    padding-left: 2.8rem;
+  }
+
+  #searchMobModal .modal-body {
+    padding: 0 1.125rem;
+  }
+
+  .mob-search-modal-header {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-top: .5rem;
+    margin-bottom: 3px;
+  }
+
+  #cartModal .modal-dialog {
+    width: 100%;
+    padding-top: 3.7rem;
+  }
+
+  #cartModal .modal-content {
+    margin-bottom: 7.5rem;
+  }
+
+  .es-cart-param {
+    display: none;
+  }
+
+  .es-cart-category {
+    display: none;
+  }
+
+  .es-cart-title a {
+    font-size: 1rem;
+    width: 50%;
+    font-weight: 400;
   }
 }
